# claude-kiro

./: .gitignore  Makefile  README.md  VISION.md  pyproject.toml
.claude/: CLAUDE.md
.claude/commands/spec/: create.md
.claude/output-styles/: spec-driven.md
.claude/specs/cli-init-hook-management/: design.md  requirements.md  tasks.md
.claude/specs/docs-mini-framework/: design.md  requirements.md  tasks.md
.claude/specs/github-pages-site/: design.md  evolution.md  requirements.md  tasks.md
.claude/specs/hook-scripts-package/: design.md  evolution.md  requirements.md  tasks.md
docs/: 404.html  cli.html  commands.html  examples.html  getting-started.html  index.html  install.sh  methodology.html  template.html
docs/assets/css/: kiro.css  theme.css
docs/assets/js/: kiro.js
research/claude-code/: agents.md  cli-and-sdk.md  hooks.md  output-styles.md  slash-commands.md  steering.md  thinking-mode.md  todowrite.md
research/kiro/: hooks-patterns.md  specs-methodology.md  ux-workflow.md
synthesis/: kiro-to-claude-mapping.md  phase1-implementation.md
