[project]
name = "claude-kiro"
version = "0.1.0"
description = "Add your description here"
readme = "README.md"
authors = [
    { name = "Fredrik Angelsen", email = "fredrikangelsen@gmail.com" }
]
requires-python = ">=3.11"
dependencies = []

[project.scripts]
claude-kiro = "claude_kiro:main"

[build-system]
requires = ["uv_build>=0.8.22,<0.9.0"]
build-backend = "uv_build"
