[project]
name = "claude-kiro"
version = "0.1.0"
description = "Spec-driven development methodology for Claude Code"
readme = "README.md"
license = { text = "MIT" }
authors = [
    { name = "Fredrik Angelsen", email = "fredrikangelsen@gmail.com" }
]
requires-python = ">=3.12"
keywords = ["claude-code", "kiro", "spec-driven-development"]
classifiers = [
    "Development Status :: 4 - Beta",
    "License :: OSI Approved :: MIT License",
    "Programming Language :: Python :: 3.12",
]
dependencies = [
    "click>=8.3.0",
]

[project.urls]
Homepage = "https://angelsen.github.io/claude-kiro/"
Documentation = "https://angelsen.github.io/claude-kiro/getting-started.html"
Repository = "https://github.com/angelsen/claude-kiro"
Issues = "https://github.com/angelsen/claude-kiro/issues"

[project.scripts]
# Main CLI
ck = "claude_kiro.cli:cli"

[build-system]
requires = ["uv_build>=0.8.22,<0.9.0"]
build-backend = "uv_build"
